# SeQuant

./: CMakeLists.txt  combine.py  mr_df_skeleton.itfaa  mr_skeleton.itfaa  mrcc2-s.json  mrcc2-s_en.inp  mrcc2-s_en0.inp  mrcc2-s_intkx_p0.inp  mrcc2-s_intkx_p1.inp  mrcc2-s_intkx_p2.inp  mrcc2-s_res1_i1.inp  mrcc2-s_res1_s0.inp  mrcc2-s_res1_s1.inp  mrcc2-s_res2_i2.inp  mrcc2-s_res2_p0.inp  mrcc2-s_res2_p1.inp  mrcc2-s_res2_p2.inp  mrcc2-s_res2_s1.inp  mrcc2-s_res2_s1_singles.inp  mrcc2-s_res2_s2.inp  mrcc2.json  mrcc2_en.inp  mrcc2_en0.inp  mrcc2_intkx_p0.inp  mrcc2_intkx_p1.inp  mrcc2_intkx_p2.inp  mrcc2_res1_i1.inp  mrcc2_res1_s0.inp  mrcc2_res1_s1.inp  mrcc2_res2_i2.inp  mrcc2_res2_p0.inp  mrcc2_res2_p1.inp  mrcc2_res2_p2.inp  mrcc2_res2_s1.inp  mrcc2_res2_s1_singles.inp  mrcc2_res2_s2.inp  mrcc2_sum_t1_s1.inp  mrccsd.json  mrccsd_en.inp  mrccsd_en0.inp  (+48 more)
SeQuant/core/: abstract_tensor.hpp  binary_node.hpp  eval_expr.cpp  expr.cpp  expr.hpp  index.hpp  logger.hpp  op.hpp  optimize.hpp  parse.hpp  result_expr.cpp  result_expr.hpp  space.cpp  space.hpp  tensor.cpp  tensor.hpp  tensor_canonicalizer.cpp  tensor_network.cpp  tensor_network.hpp  type_traits.hpp  vertex_painter.hpp  wick.impl.hpp
SeQuant/core/eval/: eval.hpp  (+2 more)
cmake/modules/: FindOrFetchLibPerm.cmake
examples/codes/: CMakeLists.txt  Utils.cpp  Utils.hpp  cc_sequant.cpp
examples/tensor_network_graphs/: tensor_network_graphs.cpp
external-interface/: CMakeLists.txt  external_interface.cpp  format_support.hpp  processing.cpp  processing.hpp  utils.cpp  utils.hpp
playground/: CMakeLists.txt  Utils.cpp  Utils.hpp  cc_sequant.cpp  ccd.cpp  ccd_sequant.cpp  compare.cpp  icMRCC.cpp  playground.cpp  repro.cpp
tests/unit/: test_canonicalize.cpp  test_eval_btas.cpp  test_eval_expr.cpp  test_eval_node.cpp  test_eval_ta.cpp  test_export.cpp  test_expr.cpp  test_index.cpp  test_mbpt.cpp  test_optimize.cpp  test_parse.cpp  test_parse_expr.cpp  test_spin.cpp  test_spin_new.cpp  test_tensor.cpp  test_tensor_network.cpp  test_utilities.cpp  test_wick.cpp
(+60 files in other folders)
